{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 152,
  "lineage": "0cfee0c1-f2c0-9bb7-a211-d3e54fcaf502",
  "resources": [
    {
      "module": "module.sg",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:093531138788:vpc/vpc-00805e79273d5c79c",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-06dd0cecd8086077f",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0ebfdf3d129e69b65",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00805e79273d5c79c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0397e24519e412c48",
            "owner_id": "093531138788",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "dev_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:093531138788:network-acl/acl-046f79911b54ba8d1",
            "default_network_acl_id": "acl-046f79911b54ba8d1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-046f79911b54ba8d1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "093531138788",
            "subnet_ids": [
              "subnet-01c8d0d376343cae6",
              "subnet-02c0b1153ba036ff4",
              "subnet-0b87202055a3f3367",
              "subnet-0fb8e677a16cafd10"
            ],
            "tags": {
              "Name": "dev-default"
            },
            "vpc_id": "vpc-02a276fd2c8639ff0"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private_2a",
            "module.vpc.aws_subnet.private_2c",
            "module.vpc.aws_subnet.public_2a",
            "module.vpc.aws_subnet.public_2c",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "dev_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:093531138788:security-group/sg-04170b0e0aab2a1f6",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04170b0e0aab2a1f6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "093531138788",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-default"
            },
            "vpc_id": "vpc-02a276fd2c8639ff0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.utility-ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_dev_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0020a00096b47e975",
            "public_dns": "ec2-15-164-24-148.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.24.148",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_dev_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0c9d7e1762bf17217",
            "public_dns": "ec2-3-35-110-61.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.110.61",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.utility-ec2",
      "mode": "managed",
      "type": "aws_elb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:093531138788:loadbalancer/terraform-asg-example",
            "availability_zones": [
              "ap-northeast-2a",
              "ap-northeast-2b",
              "ap-northeast-2c",
              "ap-northeast-2d"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "terraform-asg-example-2076115835.ap-northeast-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terraform-asg-example",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "terraform-asg-example",
            "security_groups": [
              "sg-01654ddbe04e77a13"
            ],
            "source_security_group": "093531138788/terraform-example-elb",
            "source_security_group_id": "sg-01654ddbe04e77a13",
            "subnets": [
              "subnet-035bf74f6632ea441",
              "subnet-05ffa5869fa426c4d",
              "subnet-0bee6136b325f0297",
              "subnet-0f435f2a689e07e56"
            ],
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.utility-ec2.aws_launch_configuration.example",
            "module.utility-ec2.aws_security_group.elb",
            "module.utility-ec2.aws_security_group.instance",
            "module.utility-ec2.data.aws_ami.amzlinux2"
          ]
        }
      ]
    },
    {
      "module": "module.utility-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:093531138788:internet-gateway/igw-074c2ceab7a2fb134",
            "id": "igw-074c2ceab7a2fb134",
            "owner_id": "093531138788",
            "tags": {
              "Name": "dev"
            },
            "vpc_id": "vpc-02a276fd2c8639ff0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_private_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_private_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-064627c3e0a28895e",
            "owner_id": "093531138788",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-074c2ceab7a2fb134",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public"
            },
            "vpc_id": "vpc-02a276fd2c8639ff0"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.dev",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_private_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_private_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_public_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fecf00936e933945",
            "route_table_id": "rtb-064627c3e0a28895e",
            "subnet_id": "subnet-0b87202055a3f3367"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.dev",
            "module.vpc.aws_route_table.dev_public",
            "module.vpc.aws_subnet.public_2a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_public_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065158706b68c78eb",
            "route_table_id": "rtb-064627c3e0a28895e",
            "subnet_id": "subnet-02c0b1153ba036ff4"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.dev",
            "module.vpc.aws_route_table.dev_public",
            "module.vpc.aws_subnet.public_2c",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:093531138788:security-group/sg-04d51baf0f0579a72",
            "description": "open ssh port for bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-04d51baf0f0579a72",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bastion",
            "name_prefix": "",
            "owner_id": "093531138788",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a276fd2c8639ff0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.utility-ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:093531138788:security-group/sg-01654ddbe04e77a13",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01654ddbe04e77a13",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-example-elb",
            "name_prefix": "",
            "owner_id": "093531138788",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-00805e79273d5c79c"
          }
        }
      ]
    },
    {
      "module": "module.utility-ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:093531138788:security-group/sg-0817a20a3f965ef7e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0817a20a3f965ef7e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-example-instance",
            "name_prefix": "",
            "owner_id": "093531138788",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-00805e79273d5c79c"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:093531138788:subnet/subnet-0fb8e677a16cafd10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.16.101.0/24",
            "id": "subnet-0fb8e677a16cafd10",
            "map_public_ip_on_launch": false,
            "owner_id": "093531138788",
            "tags": {
              "Name": "private-2a"
            },
            "vpc_id": "vpc-02a276fd2c8639ff0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:093531138788:subnet/subnet-01c8d0d376343cae6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.16.102.0/24",
            "id": "subnet-01c8d0d376343cae6",
            "map_public_ip_on_launch": false,
            "owner_id": "093531138788",
            "tags": {
              "Name": "private-2c"
            },
            "vpc_id": "vpc-02a276fd2c8639ff0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:093531138788:subnet/subnet-0b87202055a3f3367",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-0b87202055a3f3367",
            "map_public_ip_on_launch": false,
            "owner_id": "093531138788",
            "tags": {
              "Name": "public-2a"
            },
            "vpc_id": "vpc-02a276fd2c8639ff0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:093531138788:subnet/subnet-02c0b1153ba036ff4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.16.2.0/24",
            "id": "subnet-02c0b1153ba036ff4",
            "map_public_ip_on_launch": false,
            "owner_id": "093531138788",
            "tags": {
              "Name": "public-2c"
            },
            "vpc_id": "vpc-02a276fd2c8639ff0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:093531138788:vpc/vpc-02a276fd2c8639ff0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-046f79911b54ba8d1",
            "default_route_table_id": "rtb-0e2e172066f97921f",
            "default_security_group_id": "sg-04170b0e0aab2a1f6",
            "dhcp_options_id": "dopt-0ebfdf3d129e69b65",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02a276fd2c8639ff0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e2e172066f97921f",
            "owner_id": "093531138788",
            "tags": {
              "Name": "vpc-dev"
            }
          }
        }
      ]
    }
  ]
}